# swarmpr

./: .coverage  .coverage.claude.pid798.X3bwvCQx.HL40i7qP9NMh  .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  config.example.yaml  docker-compose.yml  environment.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
demo/sample_repo/api/: endpoints.py
demo/sample_repo/auth/: token_manager.py
demo/sample_repo/config/: settings.py
demo/sample_repo/payments/: processor.py  validator.py
demo/sample_repo/tests/: test_endpoints.py  test_processor.py  test_validator.py
demo/sample_tasks/: tier1_config_change.yaml  tier2_api_endpoint.yaml  tier3_payment_logic.yaml
swarmpr/: cli.py  config.py
swarmpr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
swarmpr/agents/: base.py  coder.py  planner.py  reviewer.py  tester.py
swarmpr/github/: pr.py  repo.py
swarmpr/metrics/: collector.py
swarmpr/orchestrator/: engine.py  events.py  state.py
swarmpr/providers/: base.py  litellm_provider.py
swarmpr/risk/: classifier.py  policies.py
swarmpr/server/: app.py
tests/: conftest.py  test_cli.py  test_config.py  test_metrics.py  test_server.py
tests/agents/: test_base.py  test_coder.py  test_planner.py  test_reviewer.py  test_tester.py
tests/github/: test_pr.py  test_repo.py
tests/orchestrator/: test_engine.py  test_events.py  test_state.py
tests/providers/: test_litellm_provider.py
tests/risk/: test_classifier.py  test_policies.py
